# slack-link-checker-demo

./: pyproject.toml  slack_knowledge_base.csv  slack_knowledge_extractor.py
